--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard",
-    "cordova-plugin-cszbar"
+    "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": []
 }
